# ARES_LED

./: .gitignore  1_CameraConfig_G1M_07012020.ini  1_CameraConfig_G1M_07012114.ini  1_CameraConfig_G1M_07081958.ini  1_CameraConfig_G1M_07082019.ini  2_CameraConfig_G1M_07080224.ini  2_CameraConfig_G1M_07080254.ini  README.md  WORK_PROGRESS.md
camera_capture/: README.md  capture_images.py  capture_odin1.py  (+6 more)
r2_ws/src/rgb_camera_receiver/: package.xml  setup.cfg  setup.py
r2_ws/src/rgb_camera_receiver/config/: detector.yaml  dual_receiver.yaml  receiver.yaml
r2_ws/src/rgb_camera_receiver/config/cameras/odin1/: README.md  capture.yaml  detector.yaml  receiver.yaml
r2_ws/src/rgb_camera_receiver/config/cameras/usb_rgb/: README.md  capture.yaml  detector.yaml  receiver.yaml
r2_ws/src/rgb_camera_receiver/launch/: r2_dual_led_vision.launch.py  r2_led_vision.launch.py
r2_ws/src/rgb_camera_receiver/rgb_camera_receiver/: calibrate.py  classifier.py  classifier_usb_rgb_1.py  classifier_usb_rgb_2.py  command_arbiter.py  detectors.py  evaluate.py  image_sources.py  node.py  profiles.py  protocol_decoder.py  three_segment.py  three_segment_protocol.py
r2_ws/src/rgb_camera_receiver/test/: test_calibrate.py  test_camera_profiles.py  test_classifier.py  test_evaluate.py  test_protocol_decoder.py  test_three_segment_protocol.py
shared/src/rgb_comm_protocol/: package.xml  setup.cfg  setup.py
shared/src/rgb_comm_protocol/config/: rgb_protocol.yaml
shared/src/rgb_comm_protocol/rgb_comm_protocol/: __init__.py  protocol.py
shared/src/rgb_comm_protocol/test/: test_protocol.py
(+45 files in other folders)
