<?xml version="1.0"?>
<package format="3">
  <name>rgb_comm_protocol</name>
  <version>0.1.0</version>
  <description>Shared fixed color-pair optical communication protocol.</description>
  <maintainer email="robocon@example.com">robocon</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3-yaml</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
